String format refactored